test/expected/glob_unmatched_is_error.out
[CompoundList]
  [CompoundListCondition, None]
    [SimpleCommand "echo" "a*.zzznomatch"]
[Word
  Unquoted "echo"
]
[Word
  Unquoted "a*.zzznomatch"
]
shit: 2:6: error: The glob pattern 'a*.zzznomatch' matched no file, it expands to its literal text, which is rarely intended.
     2 |  echo a*.zzznomatch
       |       ^~~~~~~~~~~~~ here.
note: Probe for matches with compgen -G 'a*.zzznomatch' or relax with set +o failglob.
